--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,26 @@
-.login{
-    max-width: 750px;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.login-container{
+    max-width: 400px;
     padding: 20px;
-    outline: 1px solid black;
+    outline: 1px solid rgb(169, 169, 169);
     border-radius: 5px;
+    margin: auto;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 15px;
+}
+
+.App{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
