--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,9 +18,18 @@ input[type=number] {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 15px;
 }
 
-.App{
+.pages{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+
+.admin-login{
+  max-width: 400px;
+  margin: 40px auto;
+  padding: 20px;
+  background: #fff;
+  outline: 1px solid rgb(169, 169, 169);
+  border-radius: 4px;
 }
