--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -113,3 +113,10 @@ nav button {
   border-radius: 50%;
   color: #333;
 }
+
+table caption{
+  text-align: right;
+}
+table caption button {
+  margin-left: 10px;
+}
